fixed header pos and overflow for footer

--- a/project2/styles/partials/_layouts.scss
+++ b/project2/styles/partials/_layouts.scss
@@ -1,6 +1,5 @@
 @import './vars';
-
-
+ 
 
 .btn {
   max-width: 190px;
@@ -21,16 +20,20 @@
     display: inline-block;
   }
 }
-
+.heroSreen{
+  position: relative;
+}
 .header {
   z-index: 10000;
   align-items: center;
   position: fixed;
-  top: 0px;
+  top: 0;
+ overflow: hidden;
+ 
   background: linear-gradient(243deg, #7e5aff84 16.9%, #55b8ff6c 83.27%);
 
   margin-bottom: 137px;
-  width: 100%;
+  width: 100vw;
   padding-top: 50px;
   padding-bottom:50px;
 
@@ -622,7 +625,7 @@ min-height: 90px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
+  overflow: hidden;
 
   .container {
     position: relative;
